--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,21 +1,21 @@
 #JDBC Global Setting
 #jdbc.driver=com.mysql.jdbc.Driver
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/boots?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=123456
 
 ##DataSource Global Setting
-#ÅäÖÃ³õÊ¼»¯´óĞ¡¡¢×îĞ¡¡¢×î´ó
+#
 ds.initialSize=1
 ds.minIdle=1
 ds.maxActive=20
 
-#ÅäÖÃ»ñÈ¡Á¬½ÓµÈ´ı³¬Ê±µÄÊ±¼ä
+#æœ€å¤§ç­‰å¾…æ—¶é—´
 ds.maxWait=60000
 
-#ÅäÖÃ¼ä¸ô¶à¾Ã²Å½øĞĞÒ»´Î¼ì²â£¬¼ì²âĞèÒª¹Ø±ÕµÄ¿ÕÏĞÁ¬½Ó£¬µ¥Î»ÊÇºÁÃë
+#
 ds.timeBetweenEvictionRunsMillis=60000
 
-#ÅäÖÃÒ»¸öÁ¬½ÓÔÚ³ØÖĞ×îĞ¡Éú´æµÄÊ±¼ä£¬µ¥Î»ÊÇºÁÃë
+#
 ds.minEvictableIdleTimeMillis=300000
